# Job-Hunter

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_RELEASE.txt  START_JOBFLOW_DESKTOP.cmd  llms.txt
.github/: FUNDING.yml  pull_request_template.md
desktop_app/: README.md  packaging_entry.py  pyproject.toml  run_release.ps1
desktop_app/runtime/backups/: .gitignore
desktop_app/runtime/data/: demo_candidate_resume.md
desktop_app/src/jobflow_desktop_app/: __init__.py  agent_cli.py  bootstrap.py  main.py  paths.py  prompt_assets.py
desktop_app/src/jobflow_desktop_app/ai/: client.py  model_catalog.py  role_recommendations.py  role_recommendations_models.py  role_recommendations_parse.py  role_recommendations_profile.py  role_recommendations_prompts.py  role_recommendations_resume.py  role_recommendations_service.py  role_recommendations_text.py
desktop_app/src/jobflow_desktop_app/app/: context.py  main_window.py  theme.py
desktop_app/src/jobflow_desktop_app/cli/: agent.py
desktop_app/src/jobflow_desktop_app/db/: bootstrap.py  connection.py  schema.sql  target_role_cleanup.py
desktop_app/tests/: __init__.py  _helpers.py  test_analysis_llm.py  test_analysis_service.py  test_async_tasks.py  test_bootstrap_application.py  test_candidate_basics_step.py  test_candidate_directory_page.py  test_candidate_job_pool.py  test_candidate_search_signals.py  test_candidate_workspace_compact_page.py  test_candidate_workspace_page.py  test_company_ai_ranking.py  test_company_discovery.py  test_company_pool_store.py  test_company_selection.py  test_company_source_diagnostics.py  test_company_sources.py  test_company_stage_support.py  test_company_state.py  test_daily_desktop_qa_preflight.py  test_db_bootstrap.py  test_direct_job_discovery_stage.py  test_final_output.py  test_github_release_updates.py  test_job_search_runner_db_reads.py  test_job_search_runner_manual_tracking.py  test_job_search_runner_records.py  test_job_search_runner_regressions.py  test_job_search_runner_unit.py  test_main_window_lifecycle.py  test_main_window_smoke.py  test_manual_tracking.py  test_manual_tracking_store.py  test_model_catalog.py  test_openai_responses.py  test_output_restore.py  test_packaged_paths.py  test_python_runtime_boundary.py  test_release_update_manifest.py  (+52 more)
(+201 files in other folders)
