[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobflow-desktop-app"
version = "0.9.0"
description = "Local desktop application for job discovery, screening, scoring, and export."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["job-search", "career-tools", "desktop-app", "openai", "sqlite", "automation", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "PySide6>=6.7,<7",
  "pypdf>=5,<7",
  "openpyxl>=3.1,<4"
]

[project.urls]
Homepage = "https://github.com/liuyingxuvka/Job-Hunter"
Documentation = "https://github.com/liuyingxuvka/Job-Hunter/blob/main/README.md"
Repository = "https://github.com/liuyingxuvka/Job-Hunter"
Issues = "https://github.com/liuyingxuvka/Job-Hunter/issues"
Funding = "https://paypal.me/Yingxuliu"

[project.scripts]
jobflow-desktop = "jobflow_desktop_app.main:main"
jobflow-agent = "jobflow_desktop_app.cli.agent:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jobflow_desktop_app = [
  "resources/prompts/*/*.txt",
]
